# Planets-Position

./: .gitignore  README.md  _config.yml  build.gradle  gradle.properties  index.html  index.md  params.json
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/beta/: output.json
app/release/: output.json
app/src/beta/res/values/: google_maps_api.xml
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: timezone.db
app/src/main/jni/: Android.mk  CMakeLists.txt  planets_swiss.c
app/src/main/jni/swiss/: swecl.c  swehouse.c
app/src/main/res/drawable/: side_nav_bar.xml
app/src/main/res/layout/: activity_planets_main.xml  activity_solar_eclipse_map.xml  activity_user_location.xml  app_bar_planets_main.xml  content_planets_main.xml  eclipse_list_row.xml  fragment_about.xml  fragment_eclipse.xml  fragment_gpsdialog.xml  fragment_live_position.xml  fragment_location_task.xml  fragment_lunar_data.xml  fragment_lunar_occult.xml  fragment_occult_data.xml  fragment_planet_data.xml  fragment_settings.xml  fragment_sky_position.xml  fragment_solar_data.xml  fragment_solar_map.xml  fragment_user_city_dialog.xml  fragment_user_location.xml  fragment_whats_up.xml  lat_dialog.xml  long_dialog.xml  nav_header_planets_main.xml  occult_list_row.xml  progress_dialog.xml  progress_dialog_hor.xml  settings_row.xml  spinner_drop_item.xml  spinner_item.xml  whats_up_row.xml  (+2 more)
app/src/main/res/layout-land/: activity_user_location.xml  content_planets_main.xml  fragment_live_position.xml  fragment_lunar_data.xml  fragment_occult_data.xml  fragment_planet_data.xml  fragment_sky_position.xml  fragment_solar_data.xml  fragment_user_location.xml
(+86 files in other folders)
